# oes-hook

./: README.md  pyproject.toml
src/oes/hook/: __init__.py  executable.py  http.py  python.py  serialization.py  types.py
tests/: test_executable.py  test_http.py  test_python.py  test_serialization.py
